--- a/assets/maker.scss
+++ b/assets/maker.scss
@@ -799,9 +799,9 @@
 
       &-con {
         width: calc(100% - 20px);
-        height: calc(100% - 30px);
+        height: calc(100% - 27px);
         left: 10px;
-        top: 15px;
+        top: 13px;
         border-radius: 30px;
 
         &.preview-profile {
@@ -2134,16 +2134,17 @@
       z-index: 2;
 
       .name {
-        font-weight: 500;
-        padding: 10px 0 11px;
-        width: 100px;
-        text-align: center;
-        border-radius: 10px;
-        position: absolute;
-        left: 0;
-        top: -13px;
-        color: #fff;
         font-weight: 600;
+        position: absolute;
+        width: 120px;
+        left: -4px;
+        top: -20px;
+        height: 40px;
+        padding: 0;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        font-size: 1.5rem;
 
         &.font-sm {
           font-size: 1.3rem;
@@ -2197,7 +2198,7 @@
     &--logo {
       position: absolute;
       left: 50%;
-      top: 100px;
+      top: 80px;
       transform: translateX(-50%);
       width: 70%;
       max-height: 120px;
@@ -2428,7 +2429,7 @@
         &.head{
           position:absolute;
           left:0;
-          bottom:189px;
+          top:calc(39% + 70px);
           width:150px;
           height:150px;
           z-index: 10;
