--- a/assets/maker.scss
+++ b/assets/maker.scss
@@ -2044,6 +2044,30 @@
         }
       }
     }
+    .input-name{
+      position:absolute;
+      z-index: 10;
+      left:50%;
+      top:50%;
+      transform:translate(-50%, -50%);
+      width:80%;
+      background-color: rgba(255, 255, 255, .7);
+      border-radius: 10px;
+      display:flex;
+      align-items: center;
+      justify-content: center;
+      font-size:1.5rem;
+      flex-direction: column;
+      padding:25px 20px;
+      text-shadow: -1px 0 rgba(255, 255, 255, .5), 0 1px rgba(255, 255, 255, .5), 1px 0 rgba(255, 255, 255, .5), 0 -1px rgba(255, 255, 255, .5);
+      .input-text{
+        width:100%;
+        margin-top:15px;
+      }
+      .button{
+        margin-top:15px;
+      }
+    }
   }
 
   &-img {
@@ -2067,7 +2091,7 @@
       height: 120%;
       top: unset;
       bottom: -25%;
-      left: -12%;
+      left: -10%;
       @media (max-width: 800px) {
         left: calc(50vw - 30vh);
       }
@@ -2409,14 +2433,17 @@
       }
 
       .name {
-        text-align: right;
         border-top: 3px solid #fff;
         font-size: 3.2rem;
         background-color: rgba(255, 255, 255, .7);
         position: absolute;
         left: 0;
-        top: 60%;
-        padding: 9px 20px;
+        bottom:260px;
+        padding:0 20px;
+        display:flex;
+        align-items: center;
+        justify-content: flex-end;
+        height:70px;
         width: 100%;
         z-index: 1;
         font-weight: 600;
@@ -2429,7 +2456,7 @@
         &.head{
           position:absolute;
           left:0;
-          top:calc(39% + 70px);
+          bottom:260px;
           width:150px;
           height:150px;
           z-index: 10;
@@ -2455,17 +2482,17 @@
         padding: 20px;
         background: rgba(255, 255, 255, .7);
         width: 100%;
-        height: 190px;
+        height: 150px;
         position: absolute;
         left: 0;
-        top: calc(60% + 90px);
+        bottom:100px;
         font-size: 1.4rem;
         word-break: break-all;
         color: #000;
         text-shadow: -1px 0 rgba(255, 255, 255, .5), 0 1px rgba(255, 255, 255, .5), 1px 0 rgba(255, 255, 255, .5), 0 -1px rgba(255, 255, 255, .5);
 
         .con {
-          height: 100%;
+          height: calc(100% + 20px);
           overflow: auto;
           margin:0 10px;
           white-space: pre-line;
@@ -2476,19 +2503,24 @@
 
       .face-list {
         position: absolute;
-        top: 20px;
-        right: 20px;
+        bottom: 20px;
+        left: 20px;
         display: flex;
-        justify-content: space-around;
         width: calc(100% - 40px);
-        flex-direction: column;
-        align-items: flex-end;
+        align-items: center;
+        overflow-x: auto;
 
         &--item {
           background: #fff;
-          width: 20%;
-          outline: 2px solid #fff;
+          min-width: 60px;
+          min-height: 60px;
+          border: 2px solid #fff;
           margin-bottom: 10px;
+          margin-right:10px;
+          overflow:hidden;
+          &:last-child{
+            margin-right:0;
+          }
 
           img {
             width: 100%;
