--- a/assets/common.scss
+++ b/assets/common.scss
@@ -1383,19 +1383,23 @@ button:disabled{
             -webkit-box-orient: vertical;
             overflow: hidden;
             text-overflow: ellipsis;
-            height: 47px;
+            height: 45px;
+            margin-top:5px;
+            line-height: 1.4;
           }
 
           .bottom {
             display: flex;
             justify-content: space-between;
-            margin-top: 10px;
+            margin-top: 8px;
 
             .price {
               color: $colSub;
-              font-size: 1.2rem;
-              background: url(~/static/images/icon/C.svg)no-repeat left center;
+              font-size: 1.3rem;
+              background: url(~/static/images/icon/C.svg)no-repeat left 68%;
               padding-left: 15px;
+              display:flex;
+              align-items: center;
 
               &.free {
                 padding-left: 0;
@@ -1411,16 +1415,16 @@ button:disabled{
                 position: absolute;
 
                 &:checked~.icon {
-                  background: url(~/static/images/icon/cart_fill.svg)no-repeat center;
+                  background: url(~/static/images/icon/cart_fill.svg)no-repeat center / 100%;
                 }
               }
 
               .icon {
                 cursor: pointer;
                 display: block;
-                width: 16px;
-                height: 16px;
-                background: url(~/static/images/icon/cart.svg)no-repeat center;
+                width: 20px;
+                height: 20px;
+                background: url(~/static/images/icon/cart.svg)no-repeat center / 100%;
               }
             }
           }
