--- a/assets/maker.scss
+++ b/assets/maker.scss
@@ -437,6 +437,7 @@
         min-height: 32px;
         display: flex;
         align-items: center;
+        position:relative;
 
         .text {
           display: inline-block;
@@ -2963,7 +2964,7 @@
 
     .input-file {
       width: 100%;
-      height: 535px;
+      height: 536px;
       display: flex;
       align-items: center;
       justify-content: center;
@@ -3227,10 +3228,12 @@
       text-overflow: ellipsis;
       overflow:hidden;
       margin-bottom:5px;
+      height:12px;
     }
     &--cr{
       color:#fff;
       margin-bottom:5px;
+      height:12px;
     }
     &--pt{
       color:#fff;
