--- a/assets/variables.scss
+++ b/assets/variables.scss
@@ -15,6 +15,7 @@ $colPink : #EA7070;
 $colPinkHover : #d96565;
 $colBlue : #86AEEB;
 $colBlueHover : #7da5e1;
+$colGrayBg : #f4f5f7;
 
 //text
 $textCol1 : #111;
