--- a/assets/common.scss
+++ b/assets/common.scss
@@ -2502,11 +2502,12 @@ button:disabled {
 
     &-con {
       width: 100%;
-      height: 769px;
       padding: 20px 25px;
       background-color: #fff;
       border-radius: 10px;
-
+      &.type1 {
+        height: 769px;
+      }
       .detail {
         p {
           margin: 10px 0;
@@ -2541,8 +2542,8 @@ button:disabled {
         padding: 0 10px 5px;
 
         &--btn {
-          font-size: 1.8rem;
-          margin-right: 20px;
+          font-size: 1.5rem;
+          margin-right: 10px;
         }
       }
 
