에셋 구매내역 마크업

--- a/assets/common.scss
+++ b/assets/common.scss
@@ -2528,10 +2528,96 @@ button:disabled {
           }
         }
       }
-
     }
   }
-
+  
+  .list {
+    width: 100%;
+    &-asset {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: space-between;
+      .item {
+        width: calc(50% - 50px);
+        margin: 0 0 4rem 0;
+        display: -webkit-box;
+        display: -ms-flexbox;
+        display: flex;
+        -webkit-box-orient: vertical;
+        -webkit-box-direction: normal;
+        -webkit-box-align: flex-start;
+        -ms-flex-align: flex-start;
+        align-items: flex-start;
+        &-img {
+          width: 135px;
+          height: 271px;
+          margin-right: 10px;
+          background-color: #fff;
+          border-radius: 10px;
+          border: 1px solid #ddd;
+          img {
+            width: 100%;
+          }
+        }
+        &-txt {
+          width: calc(100% - 135px);
+          .tit {
+            font-size: 2rem;
+            display: -webkit-box;
+            word-wrap: break-word;
+            -webkit-line-clamp: 3;
+            -webkit-box-orient: vertical;
+            overflow: hidden;
+            text-overflow: ellipsis;
+            height: 75px;
+            line-height: 1.2;
+            font-weight: normal;
+            margin-bottom: 20px;
+          }
+          .info {
+            &-list {
+              margin-bottom: 15px;
+              font-size: 1.6rem;
+              display: flex;
+              line-height: 1.3;
+              .label {
+                min-width: 100px;
+                color: $textCol2;
+                display: inline-block;
+                
+              }
+              .text {
+                word-break: keep-all;
+              }
+            }
+            
+          }
+          @media (max-width: 500px) {
+            .tit {
+              font-size: 1.8rem;
+              height: 65px;
+            }
+            .info {
+              &-list {
+                margin-bottom: 15px;
+                font-size: 1.4rem;
+                .label {
+                  min-width: 60px;
+                }
+                .text {
+                  word-break: keep-all;
+                }
+              }
+            }
+          }
+        }
+        @media (max-width: 1000px) {
+          width: 100%;
+        }
+      }
+    }
+  }
+  
   @media (max-width: 800px) {
     height: calc(100vh - 60px);
 
