--- a/assets/common.scss
+++ b/assets/common.scss
@@ -184,6 +184,11 @@ button:disabled {
     }
   }
 
+  &-white {
+    background: #fff;
+    color: $textCol1;
+  }
+
   &-grey {
     background: $textCol2;
     color: #fff !important;
@@ -2472,11 +2477,22 @@ button:disabled {
   height: calc(100vh - 80px);
   background-color: $colGrayBg;
 
+  &.type2 {
+    height: auto;
+  }
+
   .tab {
     width: 100%;
     height: 100%;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
+    -webkit-box-pack: start;
+    -ms-flex-pack: start;
     justify-content: flex-start;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
     flex-direction: column;
     margin: 0 auto;
     padding: 40px 10px;
@@ -2505,9 +2521,11 @@ button:disabled {
       padding: 20px 25px;
       background-color: #fff;
       border-radius: 10px;
+
       &.type1 {
         height: 769px;
       }
+
       .detail {
         p {
           margin: 10px 0;
@@ -2530,13 +2548,205 @@ button:disabled {
       }
     }
   }
-  
+
+  .cart {
+    width: 100%;
+    height: 100%;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: start;
+    -ms-flex-pack: start;
+    justify-content: flex-start;
+    margin: 0 auto;
+    padding: 5rem 10px 4rem;
+    max-width: 1220px;
+
+    &-left {
+      max-width: 800px;
+      width: 100%;
+      margin-right: 20px;
+
+      .list-asset {
+        -webkit-box-orient: vertical;
+        -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+        flex-direction: column;
+        -ms-flex-wrap: nowrap;
+        flex-wrap: nowrap;
+        -webkit-box-pack: start;
+        -ms-flex-pack: start;
+        justify-content: flex-start;
+
+        .item {
+          width: 100%;
+          height: 300px;
+          margin: 0px 0 4rem 0;
+          padding-bottom: 3rem;
+          border-bottom: 1px solid #eee;
+
+          &-txt {
+            position: relative;
+            height: 100%;
+
+            button {
+              position: absolute;
+              bottom: 0;
+              right: 0;
+
+              &.btn-white {
+                font-size: 14px;
+                font-weight: 500;
+                border: 1px solid #ddd;
+              }
+            }
+
+            .info {
+              max-width: 420px;
+              width: 100%;
+            }
+          }
+        }
+      }
+    }
+
+    &-right {
+      .box-buy {
+        position: relative;
+        min-width: 300px;
+        width: 100%;
+        height: 738px;
+        padding: 30px 25px;
+        background-color: #fff;
+        border-radius: 10px;
+
+        &--list {
+          padding: 10px 0;
+          border-bottom: 1px solid #ddd;
+
+          li {
+            .list-wrap {
+              display: -webkit-box;
+              display: -ms-flexbox;
+              display: flex;
+              -webkit-box-pack: justify;
+              -ms-flex-pack: justify;
+              justify-content: space-between;
+              -webkit-box-align: baseline;
+              -ms-flex-align: baseline;
+              align-items: baseline;
+              -ms-flex-wrap: wrap;
+              flex-wrap: wrap;
+              font-size: 16px;
+              line-height: 2;
+            }
+
+            &.list-input {
+              -webkit-box-orient: vertical;
+              -webkit-box-direction: normal;
+              -ms-flex-direction: column;
+              flex-direction: column;
+
+              input,
+              select {
+                width: 100%;
+                margin: 10px 0;
+              }
+            }
+
+            .detail {
+              &.red {
+                span {
+                  color: #ff0000;
+                }
+              }
+
+              .total {
+                font-size: 4rem;
+                font-weight: 500;
+              }
+            }
+          }
+        }
+
+        .btn-buy {
+          position: absolute;
+          min-width: 200px;
+          padding: 20px 0;
+          background-color: #679AE5;
+          border-radius: 30px;
+          color: #fff;
+          bottom: 5%;
+          left: 50%;
+          -webkit-transform: translate(-50%, -5%);
+          -ms-transform: translate(-50%, -5%);
+          transform: translate(-50%, -5%);
+        }
+      }
+
+    }
+
+    @media (max-width: 768px) {
+      display: block;
+
+      &-left {
+        max-width: none;
+        display: block;
+
+        .list-asset {
+          .item-check {
+            margin-right: 10px;
+          }
+        }
+
+      }
+
+      &-right {
+        visibility: hidden;
+
+        .box-buy {
+          min-width: 0;
+          width: 0;
+          height: 0;
+          padding: 0;
+
+          &--list {
+            padding: 0;
+          }
+
+          .btn-buy {
+            position: fixed;
+            visibility: visible !important;
+            min-width: 0;
+            width: 100%;
+            padding: 25px 0;
+            bottom: 0;
+            -webkit-transform: translate(-50%, -0%);
+            -ms-transform: translate(-50%, -0%);
+            transform: translate(-50%, -0%);
+            border-radius: 0;
+            z-index: 10;
+          }
+        }
+      }
+
+
+    }
+  }
+
   .list {
     width: 100%;
+
     &-asset {
+      display: -webkit-box;
+      display: -ms-flexbox;
       display: flex;
+      -ms-flex-wrap: wrap;
       flex-wrap: wrap;
+      -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
       justify-content: space-between;
+
       .item {
         width: calc(50% - 50px);
         margin: 0 0 4rem 0;
@@ -2548,6 +2758,16 @@ button:disabled {
         -webkit-box-align: flex-start;
         -ms-flex-align: flex-start;
         align-items: flex-start;
+
+        &-check {
+          height: 271px;
+          margin-right: 25px;
+
+          label {
+            height: 100%;
+          }
+        }
+
         &-img {
           width: 135px;
           height: 271px;
@@ -2555,12 +2775,15 @@ button:disabled {
           background-color: #fff;
           border-radius: 10px;
           border: 1px solid #ddd;
+
           img {
             width: 100%;
           }
         }
+
         &-txt {
           width: calc(100% - 135px);
+
           .tit {
             font-size: 2rem;
             display: -webkit-box;
@@ -2568,42 +2791,60 @@ button:disabled {
             -webkit-line-clamp: 3;
             -webkit-box-orient: vertical;
             overflow: hidden;
+            -o-text-overflow: ellipsis;
             text-overflow: ellipsis;
             height: 75px;
             line-height: 1.2;
             font-weight: normal;
             margin-bottom: 20px;
+
+            &-cart {
+              -webkit-line-clamp: 2;
+              height: 50px;
+              max-width: 420px;
+              width: 100%;
+            }
           }
+
           .info {
             &-list {
               margin-bottom: 15px;
               font-size: 1.6rem;
+              display: -webkit-box;
+              display: -ms-flexbox;
               display: flex;
               line-height: 1.3;
+
               .label {
                 min-width: 100px;
                 color: $textCol2;
                 display: inline-block;
-                
+
               }
+
               .text {
                 word-break: keep-all;
               }
             }
-            
+
           }
+
           @media (max-width: 500px) {
             .tit {
               font-size: 1.8rem;
               height: 65px;
             }
+
             .info {
+
               &-list {
                 margin-bottom: 15px;
                 font-size: 1.4rem;
+
                 .label {
                   min-width: 60px;
                 }
+
                 .text {
                   word-break: keep-all;
                 }
@@ -2611,13 +2852,24 @@ button:disabled {
             }
           }
         }
+
         @media (max-width: 1000px) {
           width: 100%;
         }
       }
     }
   }
-  
+
+  .cart {
+    &-con {
+      width: 100%;
+      padding: 20px 25px;
+      background-color: transparent;
+      border-radius: 10px;
+    }
+
+  }
+
   @media (max-width: 800px) {
     height: calc(100vh - 60px);
 
