--- a/assets/maker.scss
+++ b/assets/maker.scss
@@ -2827,6 +2827,25 @@
           top: 0;
         }
       }
+
+      &:checked+.checkbox-round {
+        border-color: $colPrimary;
+
+        &:after {
+          content: "";
+          display: block;
+          width: 100%;
+          height: 100%;
+          background-color: $colPrimary;
+          background-image: url(~/static/images/icon/check_wh_2.svg);
+          background-repeat: no-repeat;
+          background-position: center;
+          border-radius: 50%;
+          position: absolute;
+          left: 0;
+          top: 0;
+        }
+      }
     }
 
     .check {
@@ -2848,6 +2867,14 @@
         border: 1px solid #ccc;
         border-radius: 3px;
         position: relative;
+        &-round {
+          width: 18px;
+          height: 18px;
+          border-radius: 50%;
+          background-image: url(~/static/images/icon/check_bl.svg);
+          background-repeat: no-repeat;
+          background-position: center;
+        }
       }
     }
 
