--- a/assets/reset.scss
+++ b/assets/reset.scss
@@ -127,6 +127,14 @@
 	font-style: normal;
 }
 
+// Baloo
+@font-face {
+	font-family: 'Baloo';
+	src: url('../static/fonts/Baloo.woff') format('woff');
+	font-weight: normal;
+	font-style: normal;
+}
+
 //default
 html,
 body,
