--- a/assets/common.scss
+++ b/assets/common.scss
@@ -1472,12 +1472,15 @@ button:disabled {
 
         img {
           width: 100%;
+          height: 100%;
+          object-fit: cover;
           position: absolute;
           left: 0;
           top: 50%;
           transform: translateY(-50%);
           z-index: 1;
         }
+        
 
         &.character {
           img {
@@ -1486,8 +1489,12 @@ button:disabled {
             left: 50%;
             transform: translate(-50%, -50%);
           }
+          @media (max-width: 768px) {
+            img {
+              height: 90%;
+            }
+          }
         }
-
         .like {
           width: 30px;
           height: 30px;
@@ -1546,6 +1553,21 @@ button:disabled {
             margin-top: 5px;
             line-height: 1.4;
           }
+          @media (max-width: 768px) {
+            .text {
+              color: #fff;
+            font-size: 1.5rem;
+            display: -webkit-box;
+            word-wrap: break-word;
+            -webkit-line-clamp: 2;
+            -webkit-box-orient: vertical;
+            overflow: hidden;
+            text-overflow: ellipsis;
+            height: 35px;
+            margin-top: 5px;
+            line-height: 1.2;
+            }
+          }
 
           .bottom {
             display: flex;
@@ -1600,6 +1622,33 @@ button:disabled {
 
           &:nth-child(5n) {
             margin-right: 0;
+          }
+        }
+        @media (max-width: 768px) {
+          .card-list--item {
+            width: max(calc((100% - 40px)/3));
+            height: 290px;
+            &:nth-child(5n) {
+              margin-right: 20px;
+            }
+            &:nth-child(3n) {
+              margin-right: 0;
+            }
+          }
+        }
+        @media (max-width: 500px) {
+          .card-list--item {
+            width: max(calc((100% - 20px)/2));
+            &:nth-child(5n) {
+              margin-right: 20px;
+            }
+            &:nth-child(3n) {
+              margin-right: 20px;
+            }
+            &:nth-child(2n) {
+              margin-right: 0;
+            }
+            
           }
         }
       }
@@ -1670,6 +1719,7 @@ button:disabled {
 .top-search {
   margin: 70px auto;
   text-align: center;
+  padding: 0 20px;
 
   &--tit {
     font-size: 4rem;
@@ -2681,10 +2731,6 @@ button:disabled {
                 width: 100%;
                 margin: 10px 0;
               }
-
-              .input-text {
-                
-              }
             }
 
             .detail {
@@ -2766,8 +2812,6 @@ button:disabled {
           
         }
       }
-
-
     }
   }
 
@@ -3035,6 +3079,5 @@ button:disabled {
         }
       }
     }
-
   }
 }
