--- a/assets/common.scss
+++ b/assets/common.scss
@@ -2985,7 +2985,7 @@ button:disabled {
   }
 
   @media (max-width: 800px) {
-    
+
 
     .tab {
       padding: 30px 15px;
@@ -3115,7 +3115,7 @@ button:disabled {
   }
 }
 .el-backtop {
-  right: 40px; 
+  right: 40px;
   bottom: 40px;
 }
 .credit {
@@ -3276,5 +3276,25 @@ button:disabled {
         }
       }
     }
+  }
+}
+
+.content-none{
+  text-align: center;
+  padding:100px 0;
+  .icon{
+    width:100px;
+    height:100px;
+    border-radius: 50px;
+    margin:50px auto;
+    background-color:#f7f7f7;
+    background-image:url(../static/images/icon/meatball.svg);
+    background-repeat: no-repeat;
+    background-size:50px;
+    background-position:center;
+  }
+  .text{
+    font-size:2rem;
+    color:#d6d6d6;
   }
 }
