--- a/assets/maker.scss
+++ b/assets/maker.scss
@@ -213,7 +213,7 @@
         height: 928px;
         position: absolute;
         width: 512px;
-        top: 50%;
+        top: calc(50% + 100px);
 
         margin-top: ceil(-928px / 2);
 
@@ -226,6 +226,18 @@
           width: 512px;
           height: 148px;
           background-color: #000;
+        }
+      }
+
+      &--debug{
+        width:369px;
+        margin-top:20px;
+        text-align: center;
+        line-height: 1.5;
+        margin-left:65px;
+        .grey{
+          color:#bbb;
+          font-weight: 300;
         }
       }
     }
@@ -2551,11 +2563,15 @@
         &--item {
           background: #fff;
           min-width: 60px;
-          min-height: 60px;
+          width: 60px;
+          height: 60px;
           border: 2px solid #fff;
           margin-bottom: 10px;
           margin-right:10px;
           overflow:hidden;
+          img{
+            width:100%;
+          }
           &:last-child{
             margin-right:0;
           }
@@ -2915,7 +2931,7 @@
 
     .btn,
     &~.btn {
-      width: 116px;
+      min-width:116px;
       font-size: 1.4rem;
       background-color: $colBlue;
       color: #fff;
