--- a/assets/maker.scss
+++ b/assets/maker.scss
@@ -2052,6 +2052,7 @@
     height: calc(100% - 30px);
     border-radius: 40px;
     overflow: hidden;
+    background-position: cover;
     @media (max-width: 800px) {
       width: 100%;
       height: 100%;
@@ -2569,6 +2570,7 @@
           margin-bottom: 10px;
           margin-right:10px;
           overflow:hidden;
+          cursor: pointer;
           img{
             width:100%;
           }
