이용약관/개인정보 폰트크기 수정

--- a/assets/common.scss
+++ b/assets/common.scss
@@ -2643,6 +2643,7 @@ button:disabled {
         p {
           margin: 10px 0;
           line-height: normal;
+          font-size: 1.2rem;
 
           strong {
             margin-top: 20px;
@@ -2656,6 +2657,7 @@ button:disabled {
           li {
             line-height: 1.8;
             word-break: keep-all;
+            font-size: 1.2rem;
           }
         }
       }
