모바일 스타일 수정/장바구니 버튼 주석처리

--- a/assets/common.scss
+++ b/assets/common.scss
@@ -418,7 +418,9 @@ button:disabled {
         background: #fff;
         line-height: 3;
         padding-bottom: 20px;
-
+        a:last-child {
+          display: none;
+        }
         .btn {
           margin-left: 0;
         }
@@ -1050,6 +1052,9 @@ button:disabled {
             .con {
               font-size: 1.4rem;
               text-align: center;
+            }
+            .btn-primary {
+              display: none;
             }
           }
         }
