프리뷰 포인트 현황 위치 변경

--- a/assets/maker.scss
+++ b/assets/maker.scss
@@ -230,6 +230,9 @@
       }
 
       &--debug{
+        position: absolute;
+        right: 0;
+        top: 20px;
         width:369px;
         margin-top:20px;
         text-align: center;
