--- a/assets/common.scss
+++ b/assets/common.scss
@@ -2355,6 +2355,34 @@ button:disabled {
           }
         }
       }
+      @media (max-width: 1000px) {
+        .tit {
+          font-size: 2rem;
+        }
+        .price {
+          .bottom {
+            .per {
+              font-size: 2.5rem;
+            }
+            .num {
+              font-size: 3rem;
+            }
+          }
+        }
+        .info-list {
+          &--item {
+            font-size: 1.4rem;
+          }
+        }
+        .intro {
+          .label {
+            font-size: 1.4rem;
+          }
+          .text {
+            font-size: 1.4rem;
+          }
+        }
+      }
     }
   }
 
