--- a/assets/maker.scss
+++ b/assets/maker.scss
@@ -2075,6 +2075,10 @@
       display:flex;
       flex-direction: column;
       justify-content: space-around;
+      &.type2{
+        left:25px;
+        top:25px;
+      }
       .btn{
         width:20px;
         height:20px;
@@ -2552,6 +2556,10 @@
           white-space: pre-line;
           margin-top:-20px;
           font-weight: 500;
+          &.type2{
+            margin-top:0;
+            height: 100%;
+          }
         }
       }
 
