--- a/assets/maker.scss
+++ b/assets/maker.scss
@@ -681,10 +681,8 @@
     }
 
     .preview {
-      width: 37vh;
-      max-width: 360px;
-      max-height: 730px;
-      height: 100%;
+      width: 360px;
+      height:730px;
 
       &-tit {
         margin-left: -75px;
